# dtcc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI-docs.yml  CI-wheels.yml  ci-build-tests.yml  ci-demos.yml  ci-docs.yml  ci-wheels.yml  ci.yml  newCI.yml
.github/workflows/archive/: ci-docs-old.yml  ci-wheels.yml
demos/: build.py  build_city_and_mesh.py  build_city_and_meshes.py  building_heights_from_pointcloud.py  dem_from_pointcloud.py  demo.py  extrude_buildings.py  generate_terrain_mesh.py  simplify_merge_building_footprints.py  view_dual.py  view_mesh.py  view_multi_geometry.py  view_pc_and_mesh.py  view_pointcloud.py
docs/: Makefile  api.md  api.rst  conf.py  data_model.rst  demo_build_city_and_meshes.rst  demos.rst  development.md  development.rst  index.rst  installation.md  installation.rst  usage.md  usage.rst  usage_builder.rst  usage_building.rst  usage_data.rst  usage_importing.rst  usage_io.rst  usage_viewer.rst
docs/sphinx/source/: api.rst  conf.py
sandbox/: new_api.py
sphinx/source/: index.rst
src/dtcc/: __init__.py
tests/: run-tests
tests/python/: test.py
utils/: commit-all  edit-all  pip-all  pip-deps-all  pip-uinstall-all  print-api  projects.csv  pull-all  push-all
workflows/: README.md  helpers1.py  workflow_dte.py  workflow_geojson_to_DF.py  workflow_iboflow.py  workflow_sanjay.py  workflow_sanjay.txt  workflow_sanjay.yaml  workflow_sfpg.py  workflow_table.py
