[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.7.3"
name = "dtcc"
description = "DTCC"
readme = "README.md"
authors = [
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
  { name = "Anders Logg", email = "logg@chalmers.se" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "dtcc-model@git+https://github.com/dtcc-platform/dtcc-model.git@develop",
  "dtcc-io@git+https://github.com/dtcc-platform/dtcc-io.git@develop",
  "dtcc-data@git+https://github.com/dtcc-platform/dtcc-data.git@develop",
  "dtcc-builder@git+https://github.com/dtcc-platform/dtcc-builder.git@develop",
  "dtcc-viewer@git+https://github.com/dtcc-platform/dtcc-viewer.git@develop",
  "dtcc-wrangler@git+https://github.com/dtcc-platform/dtcc-wrangler.git@develop",
]

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinx-immaterial"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
build-verbosity = 1
